--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -1,7 +1,10 @@
 .card {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   max-width: 30%;
   min-width: 300px;
-  margin:0 5px 20px;
+  margin: 0 5px 20px;
 
   &__image {
     width: 100%;
@@ -14,7 +17,7 @@
     width: 50%;
     color: #fff;
     background-color: #f05a28;
-    margin: 15px auto 0;
+    margin: auto auto 0;
     padding: 5px 0;
     border-radius: 5px;
     border: none;
